force-app/main/default/objects/LAD_Quote_Item__c/LAD_Quote_Item__c.object-meta.xml
<CustomObject>
    <description>FOUK-9920: Custom object for generation of Quote Lines for WebCart items.</description>
    <label>Quote Item</label>
    <nameField>
        <label>Quote Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>