force-app/main/default/objects/LAD_Quote_Item__c/fields/LAD_Price__c.field-meta.xml
<CustomField>
    <fullName>LAD_Price__c</fullName>
    <description>FOUK-9920: Value of the total adjusted Price of Cart item.</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>