force-app/main/default/objects/LAD_Quote_Item__c/fields/LAD_Product__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-9920: Lookup Relationship with Product Obj.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>