force-app/main/default/objects/LAD_Quote_Item__c/fields/LAD_Quantity__c.field-meta.xml
<CustomField>
    <fullName>LAD_Quantity__c</fullName>
    <description>FOUK-9920: Created to store the quantity value of the corresponding cart item</description>
    <label>Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>