force-app/main/default/objects/LAD_Quote_Item__c/fields/LAD_Quote__c.field-meta.xml
<CustomField>
    <fullName>LAD_Quote__c</fullName>
    <description>FOUK-9920: Master- Detail Relationship with Quote Obj.</description>
    <label>Quote</label>
    <referenceTo>LAD_Quote__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>